--- a/2019 b advanced r/syllabus_advanced r.tex
+++ b/2019 b advanced r/syllabus_advanced r.tex
@@ -47,6 +47,7 @@
 Протокол № 15 от  «28» июня 2018 г.
 \end{tabular}
 \end{flushright}
+\begin{center}
 \begin{tabular}{|l|l|}
 \hline
 Автор                         & Г. А. Мороз                    \\ \hline
@@ -56,25 +57,21 @@
 Курс                          & 3, 4                            \\ \hline
 Формат изучения дисциплины    & без использования онлайн-курса \\ \hline
 \end{tabular}
+\end{center}
 \section{ЦЕЛЬ И РЕЗУЛЬТАТЫ ОСВОЕНИЯ ДИСЦИПЛИНЫ}
 Задачей курса <<Анализ данных для лингвистов>> является продолжение знакомства с различными методами анализа данных. Курс разделен на несколько тематических блоков: первый связан с применением байесовских статистических методов (байесовский апдейт, байесовский доверительный интервал, байесовский фактор, байесовкская эмпирическая оценка), второй связан с методами уменьшения размерности (PCA, LDA, CA, MCA), третий блок связан с методами кластеризации (k-means, иерархическая кластеризация, смешанные модели) и последний блок будет посвящен проблемам применения регрессионного анализа (регрессия со смешанными эффектами, обобщённая аддитивная модель).
 \section{СОДЕРЖАНИЕ УЧЕБНОЙ ДИСЦИПЛИНЫ}
 \begin{enumerate}
-\item работа с разными распределениями
-\item байесовские статистические методы
-\item кластеризация и смешанные модели
-\item уменьшение размерности
-\item проблемы применения регрессионного анализа
+\item Работа с распределениями
+\item Байесовские статистические методы
+\item Кластеризация и смешанные модели
+\item Уменьшение размерности
+\item Проблемы применения регрессионного анализа
 \end{enumerate}
 \section{ОЦЕНИВАНИЕ}
-Итоговая оценка складывается из следующих компонентов:
-\begin{itemize}
-\item текущий контроль домашнего чтения с весом 40\%,
-\item экзамен с весом 60\%, в том числе дополнительная задача на оценку выше 8.
-\end{itemize}
-Текущий контроль складывается из оценок за контрольные работы и зачета в конце четвертого модуля. Результирующая оценка выставляется по следующей формуле:
-$$O_\textnormal{итоговый} = 0.6 \times O_\textnormal{экзамен} + 0.4 \times O_\textnormal{текущий контроль}$$
-Способ округления накопленной оценки промежуточного (итогового) контроля в форме зачета: арифметический.
+Результирующая оценка выставляется по следующей формуле:
+$$O_\textnormal{итоговая} = 14 \times \int^{\frac{1}{10}\times O_\textnormal{экзамен}}_{\frac{1}{10}\times O_\textnormal{накопленная}} \frac{\exp(\frac{1}{2}(x-1)^2)}{\sqrt{2\pi}}dx + O_\textnormal{дополнительный балл}$$
+Оценка за курс складывается из оценок за домашние работы ($O_\textnormal{накопленная}$), экзамен ($O_\textnormal{экзамен}$), а также дополнительный балл ($O_\textnormal{дополнительный балл}$), который присуждается студенту, первым указавшим на ошибку в формуле оценивания. Способ округления всех оценок: арифметический.
 \section{ПРИМЕРЫ ОЦЕНОЧНЫХ СРЕДСТВ}
 \begin{itemize}
 \item Посчитайте значение правдоподобия распределения $\mathcal{N}(\mu = 22,\, \sigma^{2}=6)$ для двух наблюдений 57 и 43.
@@ -82,8 +79,38 @@ $$O_\textnormal{итоговый} = 0.6 \times O_\textnormal{экзамен} + 0
 \end{itemize}
 \section{РЕСУРСЫ}
 \subsection{Основная литература}
+\begin{itemize}
+\item Albert, J. Bayesian computation with R / J. Albert. – 2nd ed. – Heidelberg; Dordrecht; London; New York: Springer, 2009. – 298 с. – (Use R!) . ISBN 978-0-387-92297-3.
+\item  Fox, J. An R companion to applied regression / J. Fox, S. Weisberg. – 2nd ed. – Los Angeles [etc.]: SAGE Publications, 2011. – 449 с. ISBN 978-1-412-97514-8. 
+\end{itemize} 
 \subsection{Дополнительная литература}
+\begin{itemize}
+\item Greenacre, M. Correspondence analysis in practice / M. Greenacre. – 2nd ed. – Boca Raton; London; New York: Chapman \& Hall/CRC, 2007. – 280 с. – (Interdisciplinary statistics series) - ISBN 978-1-584-88616-7. 
+\item  Doing Bayesian data analysis: a tutorial with R, JAGS, and Stan / J. K. Kruschke. – 2nd ed. – Amsterdam [etc.]: Elsevier, 2015. – 759 с. ISBN 978-0-12-405888-0. 
+\item  Gries, S. T. Statistics for linguistics with R: a practical introduction / S. T. Gries. – 2nd rev. ed. – Berlin; Boston: De Gruyter Mouton, 2013. – 359 с. ISBN 978-3-11-030728-3.
+\item  Gries S. T. Ten lectures on quantitative approaches in cognitive linguistics: corpus-linguistic, experimental, and statistical applications / S. T. Gries. – Leiden; Boston: Brill, 2017. – 211 c. – (Distinguished lectures in cognitive linguistics) . ISBN 9789004336216. 
+\end{itemize}
 \subsection{Программное обеспечение}
+\begin{tabular}{|l|l|l|}
+\hline
+№ п/п &	Наименование	& Условия доступа \\ \hline
+1	& R &	Свободно распространяемое ПО \\ \hline
+2	& Rstudio &	Свободно распространяемое ПО \\ \hline
+\end{tabular}
 \subsection{Профессиональные базы данных, информационные справочные системы, интернет-ресурсы (электронные образовательные ресурсы)}
+
+\begin{tabular}{|l|l|l|}
+\hline
+№ п/п &	Наименование	& Условия доступа \\ \hline
+1	& Страница курса &	https://agricolamz.github.io/2019\_data\_analysis\_for\_linguists/ \\ \hline
+2	& Introduction to attractor landscapes &	https://ncase.me/attractors/\\ \hline
+\end{tabular}
+
 \subsection{Материально-техническое обеспечение дисциплины}
+Учебные аудитории для лекционных занятий по дисциплине обеспечивают использование и демонстрацию тематических иллюстраций, соответствующих программе дисциплины в составе:
+\begin{itemize}
+\item ПЭВМ с доступом в Интернет (операционная система, офисные программы, антивирусные программы);
+\item мультимедийный проектор с дистанционным управлением.
+\end{itemize}
+Учебные аудитории для лабораторных и самостоятельных занятий по дисциплине оснащены ­­­­­­­­­­­­­­­­­­­­­­­­ ПЭВМ, с возможностью подключения к сети Интернет и доступом к электронной информационно-образовательной среде НИУ ВШЭ.  
 \end{document}
