--- a/2019 fe stats r/syllabus_fe stats r.tex
+++ b/2019 fe stats r/syllabus_fe stats r.tex
@@ -53,8 +53,8 @@
 \hline
 Автор                         & Г. А. Мороз                    \\ \hline
 Число кредитов                &                               \\ \hline
-Контактная работа (час.)      &                              \\ \hline
-Самостоятельная работа (час.) &                              \\ \hline
+Контактная работа (час.)      &                   40           \\ \hline
+Самостоятельная работа (час.) &                 28             \\ \hline
 Курс                          & дополнительное образование \\ \hline
 Формат изучения дисциплины    & без использования онлайн-курса \\ \hline
 \end{tabular}
