add digital humanities

--- a/2019-2020 b advanced r/syllabus_advanced r.tex
+++ b/2019-2020 b advanced r/syllabus_advanced r.tex
@@ -70,7 +70,7 @@
 \end{enumerate}
 \section{ОЦЕНИВАНИЕ}
 Результирующая оценка выставляется по следующей формуле:
-$$O_\textnormal{итоговая} = 14 \times \int^{\frac{1}{10}\times O_\textnormal{экзамен}}_{\frac{1}{10}\times O_\textnormal{накопленная}} \frac{\exp(\frac{1}{2}(x-1)^2)}{\sqrt{2\pi}}dx + O_\textnormal{дополнительный балл}$$
+$$O_\textnormal{итоговая} = 14 \times \int^{\frac{1}{10}\times O_\textnormal{экзамен}}_{-\frac{1}{10}\times O_\textnormal{накопленная}} \frac{\exp(\frac{1}{2}(x-1)^2)}{\sqrt{2\pi}}dx + O_\textnormal{дополнительный балл}$$
 Оценка за курс складывается из оценок за домашние работы ($O_\textnormal{накопленная}$), экзамен ($O_\textnormal{экзамен}$), а также дополнительный балл ($O_\textnormal{дополнительный балл}$), который присуждается студенту, первым указавшим на ошибку в формуле оценивания. Способ округления всех оценок: арифметический.
 \section{ПРИМЕРЫ ОЦЕНОЧНЫХ СРЕДСТВ}
 \begin{itemize}
